test/should-fail/vsgc1628b.f3
/**
 * @subtest
 */

def sonono = 33;

class vsgc1628 {
  def nono = 55
}
